--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -26,3 +26,33 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
+
+
+/* 公用页面样式 */
+.flex-column-page-wrap {
+  flex: 1;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+/* 文字超出隐藏 */
+.text-overflow_ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+/* PC内容壳子 */
+.content_container {
+  margin: 0 auto;
+  width: 1200dpx;
+  display: flex;
+  flex-direction: column;
+}
+::-webkit-scrollbar{width:1px;height:1px}
+::-webkit-scrollbar-track{border-radius:1px;background: transparent;}
+::-webkit-scrollbar-track:hover{background-color:rgba(0,0,0,0.06);box-shadow:0 0 0 #fff inset,0 0 0 rgba(255,255,255,0.9) inset,0 0 0 rgba(255,255,255,0.9) inset,0 0 0 rgba(255,255,255,0.9) inset}
+::-webkit-scrollbar-track:active{background-color:rgba(0,0,0,0.1)}
+::-webkit-scrollbar-thumb{border-radius:1px;background-color:rgba(0,0,0,0.1);box-shadow:0 0 0 #fff inset,0 0 0 #fff inset,0 0 0 rgba(255,255,255,0.9) inset,0 0 0 rgba(255,255,255,0.9) inset}
+::-webkit-scrollbar-thumb:hover{background-color:rgba(0,0,0,0.4)}
+::-webkit-scrollbar-thumb:active{background:rgba(0,0,0,0.6)}
+
